--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "postinstall": "node tools/postinstall/apply-patches.js && ngcc --properties module main --create-ivy-entry-points && node tools/postinstall/update-ngcc-main-fields.js",
-    "build": "node ./scripts/build-packages-dist.js",
+    "build": "ts-node --project scripts/tsconfig.json ./scripts/build-packages-dist.js",
     "build-docs-content": "node ./scripts/build-docs-content.js",
     "dev-app": "ibazel run //src/dev-app:devserver",
     "test": "node ./scripts/run-component-tests.js",
@@ -163,6 +163,7 @@
     "@types/selenium-webdriver": "^3.0.17",
     "@types/semver": "^7.3.4",
     "@types/send": "^0.14.5",
+    "@types/shelljs": "^0.8.8",
     "@types/stylelint": "^9.10.1",
     "@types/yaml": "^1.9.7",
     "autoprefixer": "^10.2.5",
