--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "check-mdc-tests": "ts-node --project scripts/tsconfig.json scripts/check-mdc-tests.ts",
     "check-mdc-exports": "ts-node --project scripts/tsconfig.json scripts/check-mdc-exports.ts",
     "check-tools": "yarn tsc --project tools/tsconfig-ci.json",
+    "tsc": "node ./node_modules/typescript/bin/tsc",
     "prepare": "husky install"
   },
-  "version": "12.1.0",
+  "version": "12.2.0-next.0",
   "dependencies": {
     "@angular/animations": "^12.1.0-next.5",
     "@angular/common": "^12.1.0-next.5",
@@ -63,7 +64,7 @@
     "@types/googlemaps": "^3.43.1",
     "@types/youtube": "^0.0.42",
     "core-js-bundle": "^3.8.2",
-    "material-components-web": "12.0.0-canary.2952c6a76.0",
+    "material-components-web": "12.0.0-canary.08d791f37.0",
     "rxjs": "^6.5.3",
     "rxjs-tslint-rules": "^4.33.1",
     "systemjs": "0.19.43",
@@ -95,53 +96,53 @@
     "@bazel/terser": "3.5.0",
     "@bazel/typescript": "3.5.0",
     "@firebase/app-types": "^0.6.1",
-    "@material/animation": "12.0.0-canary.2952c6a76.0",
-    "@material/auto-init": "12.0.0-canary.2952c6a76.0",
-    "@material/banner": "12.0.0-canary.2952c6a76.0",
-    "@material/base": "12.0.0-canary.2952c6a76.0",
-    "@material/button": "12.0.0-canary.2952c6a76.0",
-    "@material/card": "12.0.0-canary.2952c6a76.0",
-    "@material/checkbox": "12.0.0-canary.2952c6a76.0",
-    "@material/chips": "12.0.0-canary.2952c6a76.0",
-    "@material/circular-progress": "12.0.0-canary.2952c6a76.0",
-    "@material/data-table": "12.0.0-canary.2952c6a76.0",
-    "@material/density": "12.0.0-canary.2952c6a76.0",
-    "@material/dialog": "12.0.0-canary.2952c6a76.0",
-    "@material/dom": "12.0.0-canary.2952c6a76.0",
-    "@material/drawer": "12.0.0-canary.2952c6a76.0",
-    "@material/elevation": "12.0.0-canary.2952c6a76.0",
-    "@material/fab": "12.0.0-canary.2952c6a76.0",
-    "@material/feature-targeting": "12.0.0-canary.2952c6a76.0",
-    "@material/floating-label": "12.0.0-canary.2952c6a76.0",
-    "@material/form-field": "12.0.0-canary.2952c6a76.0",
-    "@material/icon-button": "12.0.0-canary.2952c6a76.0",
-    "@material/image-list": "12.0.0-canary.2952c6a76.0",
-    "@material/layout-grid": "12.0.0-canary.2952c6a76.0",
-    "@material/line-ripple": "12.0.0-canary.2952c6a76.0",
-    "@material/linear-progress": "12.0.0-canary.2952c6a76.0",
-    "@material/list": "12.0.0-canary.2952c6a76.0",
-    "@material/menu": "12.0.0-canary.2952c6a76.0",
-    "@material/menu-surface": "12.0.0-canary.2952c6a76.0",
-    "@material/notched-outline": "12.0.0-canary.2952c6a76.0",
-    "@material/radio": "12.0.0-canary.2952c6a76.0",
-    "@material/ripple": "12.0.0-canary.2952c6a76.0",
-    "@material/rtl": "12.0.0-canary.2952c6a76.0",
-    "@material/segmented-button": "12.0.0-canary.2952c6a76.0",
-    "@material/select": "12.0.0-canary.2952c6a76.0",
-    "@material/shape": "12.0.0-canary.2952c6a76.0",
-    "@material/slider": "12.0.0-canary.2952c6a76.0",
-    "@material/snackbar": "12.0.0-canary.2952c6a76.0",
-    "@material/switch": "12.0.0-canary.2952c6a76.0",
-    "@material/tab": "12.0.0-canary.2952c6a76.0",
-    "@material/tab-bar": "12.0.0-canary.2952c6a76.0",
-    "@material/tab-indicator": "12.0.0-canary.2952c6a76.0",
-    "@material/tab-scroller": "12.0.0-canary.2952c6a76.0",
-    "@material/textfield": "12.0.0-canary.2952c6a76.0",
-    "@material/theme": "12.0.0-canary.2952c6a76.0",
-    "@material/tooltip": "12.0.0-canary.2952c6a76.0",
-    "@material/top-app-bar": "12.0.0-canary.2952c6a76.0",
-    "@material/touch-target": "12.0.0-canary.2952c6a76.0",
-    "@material/typography": "12.0.0-canary.2952c6a76.0",
+    "@material/animation": "12.0.0-canary.08d791f37.0",
+    "@material/auto-init": "12.0.0-canary.08d791f37.0",
+    "@material/banner": "12.0.0-canary.08d791f37.0",
+    "@material/base": "12.0.0-canary.08d791f37.0",
+    "@material/button": "12.0.0-canary.08d791f37.0",
+    "@material/card": "12.0.0-canary.08d791f37.0",
+    "@material/checkbox": "12.0.0-canary.08d791f37.0",
+    "@material/chips": "12.0.0-canary.08d791f37.0",
+    "@material/circular-progress": "12.0.0-canary.08d791f37.0",
+    "@material/data-table": "12.0.0-canary.08d791f37.0",
+    "@material/density": "12.0.0-canary.08d791f37.0",
+    "@material/dialog": "12.0.0-canary.08d791f37.0",
+    "@material/dom": "12.0.0-canary.08d791f37.0",
+    "@material/drawer": "12.0.0-canary.08d791f37.0",
+    "@material/elevation": "12.0.0-canary.08d791f37.0",
+    "@material/fab": "12.0.0-canary.08d791f37.0",
+    "@material/feature-targeting": "12.0.0-canary.08d791f37.0",
+    "@material/floating-label": "12.0.0-canary.08d791f37.0",
+    "@material/form-field": "12.0.0-canary.08d791f37.0",
+    "@material/icon-button": "12.0.0-canary.08d791f37.0",
+    "@material/image-list": "12.0.0-canary.08d791f37.0",
+    "@material/layout-grid": "12.0.0-canary.08d791f37.0",
+    "@material/line-ripple": "12.0.0-canary.08d791f37.0",
+    "@material/linear-progress": "12.0.0-canary.08d791f37.0",
+    "@material/list": "12.0.0-canary.08d791f37.0",
+    "@material/menu": "12.0.0-canary.08d791f37.0",
+    "@material/menu-surface": "12.0.0-canary.08d791f37.0",
+    "@material/notched-outline": "12.0.0-canary.08d791f37.0",
+    "@material/radio": "12.0.0-canary.08d791f37.0",
+    "@material/ripple": "12.0.0-canary.08d791f37.0",
+    "@material/rtl": "12.0.0-canary.08d791f37.0",
+    "@material/segmented-button": "12.0.0-canary.08d791f37.0",
+    "@material/select": "12.0.0-canary.08d791f37.0",
+    "@material/shape": "12.0.0-canary.08d791f37.0",
+    "@material/slider": "12.0.0-canary.08d791f37.0",
+    "@material/snackbar": "12.0.0-canary.08d791f37.0",
+    "@material/switch": "12.0.0-canary.08d791f37.0",
+    "@material/tab": "12.0.0-canary.08d791f37.0",
+    "@material/tab-bar": "12.0.0-canary.08d791f37.0",
+    "@material/tab-indicator": "12.0.0-canary.08d791f37.0",
+    "@material/tab-scroller": "12.0.0-canary.08d791f37.0",
+    "@material/textfield": "12.0.0-canary.08d791f37.0",
+    "@material/theme": "12.0.0-canary.08d791f37.0",
+    "@material/tooltip": "12.0.0-canary.08d791f37.0",
+    "@material/top-app-bar": "12.0.0-canary.08d791f37.0",
+    "@material/touch-target": "12.0.0-canary.08d791f37.0",
+    "@material/typography": "12.0.0-canary.08d791f37.0",
     "@octokit/rest": "18.3.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
